feat: Matlantis環境とディレクトリをやり取りするサービスクラスを実装した

--- a/try.ipynb
+++ b/try.ipynb
@@ -1,6 +1,92 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "d5958cdb",
+   "metadata": {},
+   "source": [
+    "## MatlantisSSHServiceの検証\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "acbd88c6",
+   "metadata": {},
+   "source": [
+    "### 接続"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "29cf4bdd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "from dotenv import load_dotenv\n",
+    "from matlantis_ssh_service import MatlantisSSHService\n",
+    "\n",
+    "load_dotenv()\n",
+    "\n",
+    "# ---接続\n",
+    "mss = MatlantisSSHService()\n",
+    "mss.connect(os.getenv(\"WEBSOCAT_BIN\"),\n",
+    "            os.getenv(\"MATLANTIS_DOMAIN\"),\n",
+    "            os.getenv(\"MATLANTIS_USER_ID\"),\n",
+    "            os.getenv(\"NOTEBOOK_PRE_SHARED_KEY\"),\n",
+    "            os.getenv(\"USER_NAME\"),\n",
+    "            os.getenv(\"IDENTITY_FILE\"),)\n",
+    "\n",
+    "# ---ためしにコマンド実行\n",
+    "result = mss._execute_command(\"ls\")\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "491e7a1f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---ディレクトリのアップロード\n",
+    "mss.upload_directory(\"./test_dir/\", \"~/test_dir\")\n",
+    "\n",
+    "result = mss._execute_command(\"ls\")\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f4a1757a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# ---ディレクトリのダウンロード\n",
+    "mss.download_directory(\"~/test_dir2\", \"./test_dir2\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "978016e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mss.disconnect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cbb230d",
+   "metadata": {},
+   "source": [
+    "## 模索場"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "3417ed4d",
