--- a/try.ipynb
+++ b/try.ipynb
@@ -39,8 +39,8 @@
     "            os.getenv(\"IDENTITY_FILE\"),)\n",
     "\n",
     "# ---ためしにコマンド実行\n",
-    "result = mss._execute_command(\"ls\")\n",
-    "print(result.stdout)"
+    "# result = mss._execute_command(\"ls\")\n",
+    "# print(result.stdout)"
    ]
   },
   {
@@ -76,6 +76,47 @@
    "outputs": [],
    "source": [
     "mss.disconnect()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3b5df46",
+   "metadata": {},
+   "source": [
+    "## MatlantisTaskManagerの検証"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "91cf7f80",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from task_manager import MatlantisTaskManager\n",
+    "\n",
+    "\n",
+    "mtm = MatlantisTaskManager()\n",
+    "\n",
+    "mtm.submit(\n",
+    "    r\"C:\\code\\matlantis-mcp-server\\test_dir\\test.py\",\n",
+    "    r\"C:\\code\\matlantis-mcp-server\\test_dir\",\n",
+    ")\n",
+    "# mtm._execute(\n",
+    "#     \"x1234\",\n",
+    "#     r\"C:\\code\\matlantis-mcp-server\\test_dir\\test.py\",\n",
+    "#     r\"C:\\code\\matlantis-mcp-server\\test_dir\",\n",
+    "# )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "52c0f94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mtm.get_last_result()"
    ]
   },
   {
@@ -234,7 +275,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.8"
+   "version": "3.10.11"
   }
  },
  "nbformat": 4,
