fix: リモートで正しいPythonコマンドを見つけられていなかった問題を修正した - Matlantis内のPythonは、usr/bin/python3ではなく、.py311/bin/python3 - 仮想環境みたいになっているので、こちらを使う

--- a/try.ipynb
+++ b/try.ipynb
@@ -46,6 +46,28 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "90ac8b2f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = mss._execute_command(f\"{mss._detect_remote_python()} test.py\")\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c0cf8605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = mss._execute_command(\"source .py311/bin/activate ; python3 test.py\")\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "491e7a1f",
    "metadata": {},
    "outputs": [],
