fix: Pythonの実行ディレクトリを、アップロードしたフォルダに変更した - これにより、すべての出力が正しく受け取れるはず

--- a/try.ipynb
+++ b/try.ipynb
@@ -46,6 +46,17 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "5e104ecf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "result = mss._execute_command(\"cd ./mms-jobs ; ls\")\n",
+    "print(result.stdout)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "90ac8b2f",
    "metadata": {},
    "outputs": [],
